[package]
name = "futures-tungstenite"
description = "Tokio binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["Daniel Abramov <dabramov@snapview.de>", "Alexey Galakhov <agalakhov@snapview.de>"]
license = "MIT"
homepage = "https://github.com/snapview/tokio-tungstenite"
documentation = "https://docs.rs/tokio-tungstenite/0.17.2"
repository = "https://github.com/snapview/tokio-tungstenite"
version = "0.17.2"
edition = "2018"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
features = ["native-tls", "__rustls-tls"]

[dependencies]
atomic-waker = "1.0.0"
futures-core = "0.3.24"
futures-lite = "1.12.0"
futures-sink = "0.3.24"
log = "0.4"

[dependencies.tungstenite]
version = "0.17.3"
default-features = false

[dev-dependencies]
futures-util = { version = "0.3.24", features = ["sink"] }
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
url = "2.0.0"
env_logger = "0.9"
smol = "1.2.5"

[[example]]
name = "autobahn-client"
required-features = ["connect"]

[[example]]
name = "client"
required-features = ["connect"]
